day15(css): fix cropped img position

--- a/02_Frontend_Development/05.exercise/style.css
+++ b/02_Frontend_Development/05.exercise/style.css
@@ -41,6 +41,9 @@ header {
   font-family: Arial, Helvetica, sans-serif;
   width: 4rem;
   height: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #nav-items > *:hover {
